test/compile_errors/err_derive_soa_name_collision.w
//! expect-error: derive SoA target type 'ItemSoA' already exists

type ItemSoA { value: Vec[i32] }

@[derive(SoA)]
type Item { value: i32 }

fn main:
    let _ = 0
